tests/unreachable/unreachable.exp
Error: typecheck.js:4
  4:   return bar();
              ^^^^^ Cannot return `bar()` because number [1] is incompatible with string [2].
  References:
    7:     return 0;
                  ^ [1]: number
    3: function test1(): string {
                         ^^^^^^ [2]: string

Error: typecheck.js:21
 21:     var y: string = n;    // error, n is number (EmptyT would work)
                         ^ Cannot assign `n` to `y` because number [1] is incompatible with string [2].
  References:
   15:   const n = 0;
                   ^ [1]: number
   21:     var y: string = n;    // error, n is number (EmptyT would work)
                  ^^^^^^ [2]: string

Error: unreachable.js:5
  5:   return bar(x) + baz(y);
                       ^^^ Cannot call `baz` because uninitialized variable [1] is not a function.
  References:
   13:   var baz = function (why) {
             ^^^ [1]: uninitialized variable

Error: unreachable.js:13
                 v---------------
 13:   var baz = function (why) {
 14:     return y + why;
 15:   };
       ^ unreachable code

Error: unreachable.js:22
 22:       u = 5,
               ^ unreachable code

Error: unreachable.js:24
 24:       w = 7;
               ^ unreachable code


Found 6 errors
